# uefi-os

./: .gitignore  Cargo.toml  README.org  build.rs  data  flake.nix
.cargo/: config  config.toml
boot/: startup.nsh
scripts/: run_qemu.bash
src/: allocator.rs  frame_allocator.rs  framebuffer.rs  kernel.rs  lib.rs  main.rs  paging.rs  print.rs
src/interrupts/: mod.rs  pics.rs
src/memory/: allocator.rs  mod.rs
src/task/: basic_executor.rs  keyboard.rs  mod.rs
src/term/: fbterm.rs  framebuffer.rs  framebuffer_color.rs  mod.rs
