[package]
name = "op_sys"
version = "0.1.0"
edition = "2021"

build = "build.rs"


[dependencies]
log = "0.4.17"
raw-cpuid = "10.3.0"
rusttype = { version = "0.9.2", default-features = false, features = ["libm-math"] }
spin = "0.9.3"
uefi = { version = "0.15.0", default-features=false, features = ["exts"]}
uefi-services = {path="./vendor/uefi-services"}
