[package]
name = "op_sys"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "op_sys"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
ab_glyph = { version = "0.2.15", default-features = false, features = ["libm"] }
acpi = "5.0.0"
ansi-parser = { version = "0.8.0", default-features = false }
conquer-once = { version = "0.4.0", default-features = false }
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.30", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"]}
pc-keyboard = "0.7.0"
pic8259 = "0.11.0"
spin = "0.9.3"
uefi = "0.28.0"
x86_64 = "0.14.9"
